# homeWork5

./: .gitignore  .travis.yml  celery_results.sqlite3  db.sqlite3  manage.py  pyproject.toml  requirements.txt
app/: admin.py  emails.py  forms.py  models.py  serializers.py  signals.py  tasks.py  tests.py  views.py
app/management/commands/: add_student.py
app/migrations/: 0001_initial.py  0002_auto_20210307_1706.py  0002_student_normalized_name.py  0003_auto_20210224_2154.py  0003_auto_20210307_1707.py  0004_auto_20210307_1718.py  0005_auto_20210310_1829.py  0006_currency.py  0007_student_picture.py  0008_auto_20210407_1346.py  0009_auto_20210411_0858.py  0010_auto_20210411_0858.py
app/templates/: base.html  book_update.html  books.html  index.html  login.html  logout.html  registration.html  send_email_test.html  student_form.html  student_update.html  subject_update.html  subjects.html  teacher_update.html  teachers.html
homeWork5/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
