[tool.poetry]
name = "homework5"
version = "0.1.0"
description = ""
authors = ["Dariia <lystopadina@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
Django = "^3.1.7"
celery = "5.0.5"
SQLAlchemy = "^1.3.23"
requests = "^2.25.1"
django-redis = "^4.12.1"
gunicorn = "^20.0.4"
Pillow = "8.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
Faker = "^6.4.1"
gender-guesser = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
